Small corrections to make code more readable

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -29,16 +29,6 @@ img, svg
   background-repeat: no-repeat
   background-size: cover
 
-input[type='search']::-webkit-search-cancel-button
-  position: absolute
-  right: 80px
-  top: 0
-  width: 13px
-  height: 13px
-  font-size: 18px
-  cursor: pointer
-  z-index: 999
-
 .header
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.30) 0%, rgba(0, 0, 0, 0.30) 100%), lightgray 50% / cover no-repeat
   background-size: cover
